Smaller flag text

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Vue-Training</title>
 <!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
-    <!--TODO remove later-->
+    <!--TODO remove later; just to override existing CALDERA styles -->
     <style>
         body {
             background-color: black;
